--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="/fav.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Purepurchase | Online Shopping Platform</title>
-  <meta name="description"
-    content="Discover an exquisite shopping experience with PurePurchase, the ultimate React ecommerce app. Elevate your shopping journey today!">
+  <meta name="description" content="Discover an exquisite shopping experience with PurePurchase, the ultimate React ecommerce app. Elevate your
+    shopping journey today!">
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
 <body>
