--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <meta name="description" content="Discover an exquisite shopping experience with PurePurchase, the ultimate React ecommerce app. Elevate your
     shopping journey today!">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
